--- a/.github/workflows/api_test_ci.yml
+++ b/.github/workflows/api_test_ci.yml
@@ -46,4 +46,4 @@ jobs:
       run: |
         make test
       env:
-        APIKEY: ${{ secrets.GH_TOKEN }}
+        GH_TOKEN: ${{ secrets.GH_TOKEN }}
